{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 190,
  "lineage": "e005ed04-3483-b708-6515-4b6526d44530",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c82e01fc452bf6d1",
            "arn": "arn:aws:ec2:us-east-1:816069157995:elastic-ip/eipalloc-0c82e01fc452bf6d1",
            "associate_with_private_ip": "10.0.1.101",
            "association_id": "eipassoc-0d25534db71bbc0d5",
            "domain": "vpc",
            "id": "eipalloc-0c82e01fc452bf6d1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05c53368395247360",
            "private_dns": "ip-10-0-1-101.ec2.internal",
            "private_ip": "10.0.1.101",
            "public_dns": "ec2-23-23-177-180.compute-1.amazonaws.com",
            "public_ip": "23.23.177.180",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_network_interface.nic1",
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet-1",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-063484541c53bcd41",
            "arn": "arn:aws:ec2:us-east-1:816069157995:elastic-ip/eipalloc-063484541c53bcd41",
            "associate_with_private_ip": "10.0.1.102",
            "association_id": "eipassoc-08ea97571ae7dea2d",
            "domain": "vpc",
            "id": "eipalloc-063484541c53bcd41",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0288a841bd0a3ba58",
            "private_dns": "ip-10-0-1-102.ec2.internal",
            "private_ip": "10.0.1.102",
            "public_dns": "ec2-50-19-112-203.compute-1.amazonaws.com",
            "public_ip": "50.19.112.203",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_network_interface.nic2",
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet-1",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-046a0ffc52693a427",
            "arn": "arn:aws:ec2:us-east-1:816069157995:elastic-ip/eipalloc-046a0ffc52693a427",
            "associate_with_private_ip": "10.0.1.103",
            "association_id": "eipassoc-025ff3aa6793530c9",
            "domain": "vpc",
            "id": "eipalloc-046a0ffc52693a427",
            "network_border_group": "us-east-1",
            "network_interface": "eni-070a6c7d311585637",
            "private_dns": "ip-10-0-1-103.ec2.internal",
            "private_ip": "10.0.1.103",
            "public_dns": "ec2-23-21-188-75.compute-1.amazonaws.com",
            "public_ip": "23.21.188.75",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_network_interface.nic3",
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet-1",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansibleguest1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0103953a003440c37",
            "arn": "arn:aws:ec2:us-east-1:816069157995:instance/i-0d2afd7573b0c34c0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2afd7573b0c34c0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0288a841bd0a3ba58"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0288a841bd0a3ba58",
            "private_dns": "ip-10-0-1-102.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.102",
            "public_ip": "50.19.112.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-039c5b6db03b0ff13",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef52a4c893eb9f0b",
            "tags": {
              "Name": "tlian-ansibleguest1"
            },
            "tags_all": {
              "Name": "tlian-ansibleguest1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b45ada57a8bfbf79"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic2",
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet-1",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansibleguest2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0103953a003440c37",
            "arn": "arn:aws:ec2:us-east-1:816069157995:instance/i-0e4048ef342e01ad0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e4048ef342e01ad0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-070a6c7d311585637"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-070a6c7d311585637",
            "private_dns": "ip-10-0-1-103.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.103",
            "public_ip": "23.21.188.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a536f81cc42fb729",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef52a4c893eb9f0b",
            "tags": {
              "Name": "tlian-ansibleguest2"
            },
            "tags_all": {
              "Name": "tlian-ansibleguest2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b45ada57a8bfbf79"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic3",
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet-1",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "controlserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0103953a003440c37",
            "arn": "arn:aws:ec2:us-east-1:816069157995:instance/i-016153f8c0203a3e4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-016153f8c0203a3e4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-05c53368395247360"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05c53368395247360",
            "private_dns": "ip-10-0-1-101.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.101",
            "public_ip": "23.23.177.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-059bf32df70f1ef69",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef52a4c893eb9f0b",
            "tags": {
              "Name": "tlian-controlserver"
            },
            "tags_all": {
              "Name": "tlian-controlserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b45ada57a8bfbf79"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic1",
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet-1",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069157995:internet-gateway/igw-0c02e9386be178afd",
            "id": "igw-0c02e9386be178afd",
            "owner_id": "816069157995",
            "tags": {
              "Name": "tlian-internet-gw"
            },
            "tags_all": {
              "Name": "tlian-internet-gw"
            },
            "vpc_id": "vpc-0ade91116b184501f"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069157995:network-interface/eni-05c53368395247360",
            "id": "eni-05c53368395247360",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:b2:95:35:94:89",
            "owner_id": "816069157995",
            "private_ip": "10.0.1.101",
            "private_ip_list": [
              "10.0.1.101"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.101"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0b45ada57a8bfbf79"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef52a4c893eb9f0b",
            "tags": {
              "Name": "tlian-dev-nic1"
            },
            "tags_all": {
              "Name": "tlian-dev-nic1"
            }
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet-1",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069157995:network-interface/eni-0288a841bd0a3ba58",
            "id": "eni-0288a841bd0a3ba58",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:1e:c8:02:70:db",
            "owner_id": "816069157995",
            "private_ip": "10.0.1.102",
            "private_ip_list": [
              "10.0.1.102"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.102"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0b45ada57a8bfbf79"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef52a4c893eb9f0b",
            "tags": {
              "Name": "tlian-dev-nic2"
            },
            "tags_all": {
              "Name": "tlian-dev-nic2"
            }
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet-1",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069157995:network-interface/eni-070a6c7d311585637",
            "id": "eni-070a6c7d311585637",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:82:7c:37:e1:21",
            "owner_id": "816069157995",
            "private_ip": "10.0.1.103",
            "private_ip_list": [
              "10.0.1.103"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.103"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0b45ada57a8bfbf79"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef52a4c893eb9f0b",
            "tags": {
              "Name": "tlian-dev-nic3"
            },
            "tags_all": {
              "Name": "tlian-dev-nic3"
            }
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet-1",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-1-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069157995:route-table/rtb-0b4f199f3c6123868",
            "id": "rtb-0b4f199f3c6123868",
            "owner_id": "816069157995",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c02e9386be178afd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tlian-vpc-1-rt"
            },
            "tags_all": {
              "Name": "tlian-vpc-1-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ade91116b184501f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f9c20fd4f6e206d",
            "route_table_id": "rtb-0b4f199f3c6123868",
            "subnet_id": "subnet-0ef52a4c893eb9f0b"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_route_table.vpc-1-rt",
            "aws_subnet.subnet-1",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069157995:security-group/sg-0b45ada57a8bfbf79",
            "description": "Allow ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b45ada57a8bfbf79",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_traffic",
            "name_prefix": "",
            "owner_id": "816069157995",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tlian-allow_ssh"
            },
            "tags_all": {
              "Name": "tlian-allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ade91116b184501f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069157995:subnet/subnet-0ef52a4c893eb9f0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef52a4c893eb9f0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069157995",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tlian-dev-subnet"
            },
            "tags_all": {
              "Name": "tlian-dev-subnet"
            },
            "vpc_id": "vpc-0ade91116b184501f"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069157995:vpc/vpc-0ade91116b184501f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00bad852ffe0d5278",
            "default_route_table_id": "rtb-01e9ebc01e8b20b17",
            "default_security_group_id": "sg-0df15250e74760a6d",
            "dhcp_options_id": "dopt-0ef922b7cf6bbe29c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ade91116b184501f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e9ebc01e8b20b17",
            "owner_id": "816069157995",
            "tags": {
              "Name": "tlian-dev-vpc"
            },
            "tags_all": {
              "Name": "tlian-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}